--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <img src="fotoportifolio.jpg" alt="">
     <p>Olá, meu nome é Luis Otávio.</p>
-    <h1>Eu sou ex-intercambista e embaixador</h1>
+    <h1>Eu sou aluno ex-intercambista</h1>
     <p>Sou estudante da rede pública de ensino estadual do Paraná, e recentemente participei de um programa do governo que garantia 1000 bolsas de estudos de 6 meses fora do país. Sou interessado em física e programação. Atualmente, estudo duas línguas estrangeiras, o inglês e o francês.</p>
     <p>Minhas habilidades:</p>
     <div>
