--- a/index.html
+++ b/index.html
@@ -3,21 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"  crossorigin="anonymous"  />
     <title>Meu Portifólio</title>
 </head>
 <body>
-    <img src="fotoportifolio.jpg" alt="">
-    <p>Olá, meu nome é Luis Otávio.</p>
-    <h1>Eu sou aluno ex-intercambista</h1>
-    <p>Sou estudante da rede pública de ensino estadual do Paraná, e recentemente participei de um programa do governo que garantia 1000 bolsas de estudos de 6 meses fora do país. Sou interessado em física e programação. Atualmente, estudo duas línguas estrangeiras, o inglês e o francês.</p>
-    <p>Minhas habilidades:</p>
-    <div>
-        <p>SCRATCH</p>
-        <p>Hardware</p>
-        <p>Escrita</p>
-        <p>Inglês</p>
-        <p>Matemática</p>
-        <p>Física</p>
-    </div>
+    <header class="container text-center">
+        <img src="fotoportifolio.jpg" alt="Minha foto de perfil" class="rounded-circle" width="150" weigth="150">
+        <p class="lead">Olá, meu nome é Luis Otávio.</p>
+        <h1>Eu sou aluno ex-intercambista</h1>
+        <p>Sou estudante da rede pública de ensino estadual do Paraná, e recentemente participei de um programa do governo que garantia 1000 bolsas de estudos de 6 meses fora do país. Sou interessado em física e programação. Atualmente, estudo duas línguas estrangeiras, o inglês e o francês.</p>
+        <p>Minhas habilidades:</p>
+        <div>
+            <p class="badge bg-secondary">SCRATCH</p>
+            <p class="badge bg-secondary">Português</p>
+            <p class="badge bg-secondary">Inglês</p>
+            <p class="badge bg-secondary">Matemática</p>
+            <p class="badge bg-secondary">Física</p>
+        </div>
+    </header>
+
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
+  
 </body>
 </html>
