--- a/index.html
+++ b/index.html
@@ -25,20 +25,26 @@
     <main class="container">
         <h2>Meus projetos</h2>
         <div class="row">
-          <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up the
-                  bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+            <!--Projeto 1-->
+            <div class="col-md-4">
+                <div class="card">
+                  <img
+                    src="img/projeto-1.png"
+                    class="card-img-top"
+                    alt="Imagem do projeto de biblioteca virtual"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <p class="card-text">
+                      Este projeto é uma página web que apresenta uma lista dos meus livros
+                      favoritos, incluindo informações sobre os autores, datas de publicação e
+                      links para compra na Amazon. A página é estilizada com CSS para uma
+                      visualização agradável e usa fontes externas do Google Fonts.
+                    </p>
+                    <button type="button" class="btn btn-link">Veja o projeto</button>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-        </div>
       </main>
 
     <script
